# pulsar

./: .gitignore  CMakeLists.txt  README.md  Value.cpp  main.cpp
core/: checkpoint.cpp  layer.cpp  loss.cpp  neuron.cpp  nn.cpp  util.cpp  value.cpp
experiments/spiral/: generate_spiral.py  predict.cpp  spiral_data.csv  spiral_test.csv  spiral_test_prediction_2k.csv  spiral_test_prediction_5k.csv  spiral_test_prediction_64_48_1_5k.csv  spiral_test_prediction_64_64_1_2k.csv  spiral_test_prediction_64_64_1_5k.csv  spiral_test_prediction_96_64_1_5k.csv  spiral_test_prediction_96_64_1_5k_batch_of_10.csv  spiral_test_prediction_96_64_1_5k_batch_of_20.csv  spiral_test_prediction_of_train.csv  spiral_train.csv  test.cpp  train.cpp  visualize_spiral.ipynb
include/: checkpoint.h  layer.h  loss.h  neuron.h  nn.h  util.h  value.h
tests/: test_nn.cpp  test_value.cpp
